# Holographic-FIxed-Points

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
.github/workflows/: build-deploy.yml  test.yml
docs/: ROSETTA_HELIX_MATHEMATICAL_FOUNDATIONS.md
scripts/: generate_static_data.py
src/backend/: __init__.py
src/backend/api/: __init__.py  app.py  models.py  routes.py
src/backend/core/: __init__.py  base.py  bekenstein.py  criticality.py  kuramoto.py  rosetta.py  turing.py
src/backend/generators/: __init__.py  static_data.py
src/backend/language/: __init__.py  operators.py
src/frontend/: .eslintrc.json  index.html  package.json  vite.config.ts  vitest.config.ts
src/frontend/src/: main.ts
src/frontend/src/stores/: simulationStore.test.ts  simulationStore.ts
src/frontend/src/styles/: scientific-dashboard.css
src/frontend/src/visualizers/: PhaseDiagramD3.ts  PhaseSpaceVisualizer.ts  TuringPatternPlotly.ts  index.ts
src/shared/: types.ts
tests/: __init__.py  conftest.py  test_api.py  test_bekenstein.py  test_criticality.py  test_kuramoto.py  test_rosetta.py  test_turing.py
