[project]
name = "apl-holographic-fixed-points"
version = "0.1.0"
description = "APL Holographic Fixed Points Modeling System - Physics simulation and visualization"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "APL Physics Team"}
]
keywords = ["physics", "holographic", "simulation", "kuramoto", "entropy", "turing-patterns"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
]

dependencies = [
    "numpy>=1.26.0",
    "scipy>=1.11.0",
    "flask>=3.0.0",
    "pydantic>=2.5.0",
    "h5py>=3.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "mypy>=1.7.0",
    "ruff>=0.1.0",
]
server = [
    "celery>=5.3.0",
    "redis>=5.0.0",
    "gunicorn>=21.0.0",
]

[project.scripts]
generate-data = "scripts.generate_static_data:main"
run-server = "backend.api.app:run_dev_server"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.black]
line-length = 100
target-version = ['py311', 'py312']

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I", "N", "D", "UP"]
ignore = ["D100", "D104"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=src/backend"
